# enterprise-agentic-ai

./: .env.template  README.md  pyproject.toml
ai_agents/agent_communication/: knowledge_sharing.py
ai_agents/foundation_models/: deepseek_r1_agent.py  gemini_25_pro.py  llm_interface.py  model_manager.py  qwen_7b_agent.py
backend/api/: main.py
backend/core/: auth.py  database.py
backend/services/: ai_orchestration_service.py  engagement_service.py
config/ai_models/: gemini_2.5_pro.yaml
config/execution/: tool_configs.yaml
docker/: Dockerfile.ai-agents
docs/: ARCHITECTURE.md  DEPLOYMENT.md
enterprise-agentic-ai/docker/: Dockerfile.execution-engine  docker-compose.agentic.yml
enterprise-agentic-ai/docs/: README.md
enterprise-agentic-ai/requirements/: ai.txt  base.txt
execution_engine/core/: executor.py  result_parser.py
knowledge_base/external_integrations/: cve_database.py  exploitdb_integration.py
knowledge_base/traditional_db/: sqlite_vuln_db.py
localization/formatters/: date_formatter.py
localization/translations/: hi
observation_system/feedback_loops/: learning_feedback.py  strategy_adaptation.py
orchestrator/config/: orchestrator_config.yaml
orchestrator/core/: agent_coordinator.py  ooda_loop.py  task_planner.py
orchestrator/memory/: semantic_memory.py  working_memory.py
orchestrator/strategies/: dast_strategy.py
tests/integration/: ai_integration_tests.py
tests/unit/: test_agent_coordinator.py  test_cve_database.py  test_dast_strategy.py  test_deepseek_agent.py  test_engagement_service.py  test_executor.py  (+6 more)
(+78 files in other folders)
