[tool]
name = "enterprise-agentic-ai"
version = "0.1.0"
description = "An enterprise-level AI-driven DAST solution for vulnerability assessment and management."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
# Add your project dependencies here
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
flask = "^2.0"
redis = "^4.0"
pyyaml = "^5.4"

[tool.poetry]
name = "enterprise-agentic-ai"
version = "0.1.0"
description = "An enterprise-level AI-driven DAST solution for vulnerability assessment and management."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
flask = "^2.0"
redis = "^4.0"
pyyaml = "^5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"
mypy = "^0.910"

[tool.poetry.scripts]
enterprise-agentic-ai = "main:main"